--- a/index.html
+++ b/index.html
@@ -143,22 +143,18 @@
 
     <div class="top-block">
         <h1 class="Welcome">Welcome To The Root's Blog</h1>
-        <form action="/home" method="get">
-            <button class="Home">Home</button>
-        </form>
-        <form action="/about" method="get">
-            <button class="About">About</button>
-        </form>
-        <img class="RootLogo" src="/static/images/root_logo.png">
+        <a href="index.html"><button class="Home">Home</button></a>
+        <a href="about.html"><button class="About">About</button></a>
+        <img class="RootLogo" src="static/images/root_logo.png">
     </div>
     <div class="sidebar">
         <details>
             <summary>Writeup</summary>
              <ul>
-                <li><a href="/writeup/pwnable-fd">pwnable - fd</a></li>
+                <li><a href="writeup/pwnable-fd.html">pwnable - fd</a></li>
             </ul>
             <ul>
-                <li><a href="/writeup/picoctf-babygame01">picoctf-babygame01</a></li>
+                <li><a href="writeup/babygame01.html">picoctf-babygame01</a></li>
             </ul>
         </details>
 
