--- a/about.html
+++ b/about.html
@@ -93,13 +93,9 @@
 <body>
     <div class="top-block">
         <h1 class="Welcome">Welcome To The Root's Blog</h1>
-        <form action="/home" method="get">
-            <button class="Home">Home</button>
-        </form>
-        <form action="/about" method="get">
-            <button class="About">About</button>
-        </form>
-        <img class="RootLogo" src="/static/images/root_logo.png">
+        <a href="index.html"><button class="Home">Home</button></a>
+        <a href="about.html"><button class="About">About</button></a>
+        <img class="RootLogo" src="static/images/root_logo.png">
     </div>
     <div class="about-frame">
         <p>Welcome to the Root's blog!</p>
