--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
         <h1 class="Welcome">Welcome To The Root's Blog</h1>
         <a href="index.html"><button class="Home">Home</button></a>
         <a href="about.html"><button class="About">About</button></a>
-        <img class="RootLogo" src="/static/images/root_logo.png">
+        <img class="RootLogo" src="static/images/root_logo.png">
     </div>
     <div class="sidebar">
         <details>
             <summary>Writeup</summary>
              <ul>
-                <li><a href="writeup/fd.html">pwnable - fd</a></li>
+                <li><a href="/writeup/fd.html">pwnable - fd</a></li>
             </ul>
             <ul>
-                <li><a href="writeup/babygame01.html">picoctf-babygame01</a></li>
+                <li><a href="/writeup/babygame01.html">picoctf-babygame01</a></li>
             </ul>
         </details>
 
