--- a/writeup/fd.html
+++ b/writeup/fd.html
@@ -158,10 +158,10 @@
         <details>
             <summary>Writeup</summary>
              <ul>
-                <li><a href="/writeup/fd.html">pwnable - fd</a></li>
+                <li><a href="fd.html">pwnable - fd</a></li>
             </ul>
             <ul>
-                <li><a href="/writeup/babygame01.html">picoctf-babygame01</a></li>
+                <li><a href="babygame01.html">picoctf-babygame01</a></li>
             </ul>
         </details>
     </div>
