--- a/writeup/babygame01.html
+++ b/writeup/babygame01.html
@@ -167,9 +167,9 @@
 
     <div class="top-block">
         <h1 class="Welcome">Welcome To The Root's Blog</h1>
-        <a href="../index.html"><button class="Home">Home</button></a>
-        <a href="../about.html"><button class="About">About</button></a>
-        <img class="RootLogo" src="../static/images/root_logo.png" alt="logo">
+        <a href="/index.html"><button class="Home">Home</button></a>
+        <a href="/about.html"><button class="About">About</button></a>
+        <img class="RootLogo" src="/static/images/root_logo.png" alt="logo">
     </div>
 
     <div class="sidebar">
