--- a/writeup/fd.html
+++ b/writeup/fd.html
@@ -152,7 +152,7 @@
         <h1 class="Welcome">Welcome To The Root's Blog</h1>
         <a href="/index.html"><button class="Home">Home</button></a>
         <a href="/about.html"><button class="About">About</button></a>
-        <img class="RootLogo" src="../static/images/root_logo.png">
+        <img class="RootLogo" src="/static/images/root_logo.png">
     </div>
     <div class="sidebar">
         <details>
