--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
         <details>
             <summary>Writeup</summary>
              <ul>
-                <li><a href="/writeup/fd.html">pwnable - fd</a></li>
+                <li><a href="writeup/fd.html">pwnable - fd</a></li>
             </ul>
             <ul>
-                <li><a href="/writeup/babygame01.html">picoctf-babygame01</a></li>
+                <li><a href="writeup/babygame01.html">picoctf-babygame01</a></li>
             </ul>
         </details>
 
