--- a/writeup/fd.html
+++ b/writeup/fd.html
@@ -150,8 +150,8 @@
 
     <div class="top-block">
         <h1 class="Welcome">Welcome To The Root's Blog</h1>
-        <a href="/../index.html"><button class="Home">Home</button></a>
-        <a href="/../about.html"><button class="About">About</button></a>
+        <a href="/index.html"><button class="Home">Home</button></a>
+        <a href="/about.html"><button class="About">About</button></a>
         <img class="RootLogo" src="../static/images/root_logo.png">
     </div>
     <div class="sidebar">
