--- a/writeup/horcruxes.html
+++ b/writeup/horcruxes.html
@@ -124,20 +124,21 @@
 
 <div class="top-block">
     <h1 class="Welcome">Welcome To The Root's Blog</h1>
-    <form action="/home" method="get">
-        <button class="Home">Home</button>
-    </form>
-    <form action="/about" method="get">
-        <button class="About">About</button>
-    </form>
-    <img class="RootLogo" src="/static/images/root_logo.png">
+    <a href="/CyberBlog/index.html"><button class="Home">Home</button></a>
+    <a href="/CyberBlog/about.html"><button class="About">About</button></a>
+    <img class="RootLogo" src="/CyberBlog/static/images/root_logo.png">
 </div>
-
 <div class="sidebar">
     <details>
         <summary>Writeup</summary>
         <ul>
-            <li><a href="#">pwnable.kr - horcruxes</a></li>
+            <li><a href="fd.html">pwnable - fd</a></li>
+        </ul>
+        <ul>
+            <li><a href="babygame01.html">picoctf-babygame01</a></li>
+        </ul>
+        <ul>
+            <li><a href="horcruxes.html">pwnable - horcruxes</a></li>
         </ul>
     </details>
 </div>
