--- a/writeup/horcruxes.html
+++ b/writeup/horcruxes.html
@@ -85,6 +85,26 @@
             overflow-y: auto;
         }
 
+        .sidebar summary {
+            cursor: pointer;
+            font-weight: bold;
+            padding: 5px;
+        }
+
+        .sidebar ul {
+            list-style-type: none;
+            padding-left: 15px;
+        }
+
+        .sidebar ul li a {
+            color: #F9F3EF;
+            text-decoration: none;
+        }
+
+        .sidebar ul li a:hover {
+            text-decoration: underline;
+        }
+
         .main-content {
             margin-left: 100px;
             padding: 90px 20px 20px 240px;
