--- a/writeup/fd.html
+++ b/writeup/fd.html
@@ -163,6 +163,9 @@
             <ul>
                 <li><a href="babygame01.html">picoctf-babygame01</a></li>
             </ul>
+            <ul>
+                <li><a href="horcruxes.html">pwnable - horcruxes</a></li>
+            </ul>
         </details>
     </div>
 
