--- a/writeup/babygame01.html
+++ b/writeup/babygame01.html
@@ -182,6 +182,9 @@
             <ul>
                 <li><a href="babygame01.html">picoctf-babygame01</a></li>
             </ul>
+            <ul>
+                <li><a href="horcruxes.html">pwnable - horcruxes</a></li>
+            </ul>   
         </details>
 
     </div>
