--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
             <ul>
                 <li><a href="writeup/babygame01.html">picoctf-babygame01</a></li>
             </ul>
+            <ul>
+                <li><a href="writeup/horcruxes.html">pwnable - horcruxes</a></li>
+            </ul>
         </details>
 
     </div>
