--- a/writeup/horcruxes.html
+++ b/writeup/horcruxes.html
@@ -164,6 +164,7 @@
 </div>
 
 <div class="main-content">
+<h2 style="color:#F9F3EF;">pwnable.kr Challenge: "horcruxes"</h2>
 <p style="color:#F9F3EF;"><strong style="color:#7B9AD1;">Description of the challenge:</strong><br>
 <p>Voldemort concealed his splitted soul inside 7 horcruxes.<br>
 Find all horcruxes, and ROP it!<br>
